packages/rspack/tests/configCases/errors/experiments-css-off/errors.js
module.exports = [[/Unexpected `ModuleType` found: css/]];
